--- a/source/sass/blocks/navigation.scss
+++ b/source/sass/blocks/navigation.scss
@@ -94,7 +94,7 @@
   position: absolute;
   box-sizing: border-box;
   right: 0;
-  top: 50%;
+  top: 31px;
   transform: translateY(-50%);
   width: 24px;
   height: 18px;
