--- a/source/sass/global/common.scss
+++ b/source/sass/global/common.scss
@@ -26,4 +26,5 @@
   --show-more-button-color: #f2f2f2;
   --index-background-base-color: #68b738;
   --focus-border-color: #444444;
+  --contacts--background-color: #f2f2f2;
 }
