--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,3 +28,5 @@
 @import "./blocks/alternative-text-color.scss";
 @import "./blocks/cat-range.scss";
 @import "./blocks/map.scss";
+@import "./blocks/contacts-backgraound.scss";
+@import "./blocks/main.scss";
