--- a/source/sass/blocks/additional.scss
+++ b/source/sass/blocks/additional.scss
@@ -2,8 +2,12 @@
   --line-color: #68b738;
   padding-bottom: 35px;
 
+  @media (--narrow-vp) {
+    padding-top: 24px;
+  }
+
   @media (--middle-vp) {
-    padding-bottom: 69px;
+    padding-bottom: 75px;
   }
 
   @media (--wide-vp) {
@@ -18,6 +22,7 @@
 
   @media (--middle-vp) {
     gap: 69px;
+    padding-top: 79px;
   }
 
   @media (--wide-vp) {
@@ -25,6 +30,7 @@
     grid-template-columns: 1fr 245px;
     gap: 79px;
     align-items: center;
+    padding-top: 77px;
   }
 }
 
@@ -45,7 +51,13 @@
   position: relative;
   width: fit-content;
   margin: 0;
-  padding: 25px 0 36px;
+  padding: 0 var(--additional-title-indent);
+
+  @media (--narrow-vp) {
+    --additional-title-indent: 20px;
+    padding-left: 0;
+    margin-bottom: 34px;
+  }
 
   @media (--middle-vp) {
     --additional-title-indent: 38px;
@@ -55,7 +67,7 @@
   @media (--wide-vp) {
     --additional-title-indent: 41px;
     border: none;
-    padding-bottom: 81px;
+    left: -41px;
   }
 }
 
@@ -81,14 +93,13 @@
 .additional__title::before {
   content: "";
   position: absolute;
+  top: calc(50% + 2px);
   display: block;
-  right: calc(100% + var(--additional-title-indent));
-  top: 36px;
-  transform: translateY(5px);
-  width: calc(100vw - 100% - var(--additional-title-indent));
   height: 2px;
   background-color: var(--line-color);
-  box-shadow: calc(100vw + var(--additional-title-indent) - 5px) 0 0 0 var(--line-color);
+  width: calc(100vw - 100% - var(--additional-title-indent));
+  right: 100%;
+  box-shadow: calc(100vw - var(--additional-title-indent)) 0 0 0 var(--line-color);
 
   @media (--narrow-vp) {
     background-color: transparent;
@@ -99,26 +110,38 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
-  gap: 12px;
+  gap: 14px;
   padding-top: 13px;
-  padding-bottom: 19px;
+  padding-bottom: 18px;
   border-bottom: 1px solid var(--additionals-border-color);
 
   @media (--middle-vp) {
+    grid-template-columns: 1fr 1fr auto;
+    align-items: baseline;
     border-left: 1px solid var(--additionals-border-color);
     border-right: 1px solid var(--additionals-border-color);
     padding: 26px 38px 28px;
+    row-gap: 20px;
+    column-gap: 49px;
   }
 
   @media (--wide-vp) {
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: 287px auto 1fr 1fr;
     gap: 38px;
     flex: 1 0 auto;
+    padding-bottom: 15px;
+    padding-right: 1px;
   }
 }
 
 .additional__item:first-child {
   box-shadow: 0 -1px 0 0 var(--additionals-border-color);
+}
+
+.additional__item:nth-child(2) .additional__item-price {
+  @media (--wide-vp) {
+    padding-right: 10px;
+  }
 }
 
 .additional__item-name {
@@ -134,6 +157,10 @@
   @media (--not-narrow-vp) {
     font-size: 20px;
     line-height: 20px;
+  }
+
+  @media (--middle-vp) {
+    grid-column: 1/2;
   }
 
   @media (--wide-vp) {
@@ -152,6 +179,15 @@
   @media (--not-narrow-vp) {
     font-size: 16px;
     line-height: 20px;
+  }
+
+  @media (--middle-vp) {
+    text-align: right;
+  }
+
+  @media (--wide-vp) {
+    position: relative;
+    top: 3px;
   }
 }
 
@@ -175,6 +211,7 @@
   @media (--wide-vp) {
     grid-column: 4/5;
     margin: 0;
+    min-width: 224px;
   }
 }
 
