--- a/source/sass/blocks/cat-range.scss
+++ b/source/sass/blocks/cat-range.scss
@@ -7,6 +7,17 @@
   width: 100%;
   height: 50px;
   outline: none;
+
+  @media (--narrow-vp) {
+    gap: 25px;
+    width: 199px;
+  }
+
+  @media (--not-narrow-vp) {
+    top: 5px;
+    left: 3px;
+    gap: 24px;
+  }
 }
 
 .cat-range:focus-visible {
@@ -49,6 +60,8 @@
   text-transform: uppercase;
 
   @media (--not-narrow-vp) {
+    font-size: 20px;
+    line-height: 30px;
     padding: 2px 0;
     border-bottom: 2px dotted #cdcdcd;
   }
@@ -59,7 +72,7 @@
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translateY(-50%);
+  transform: translate(-50%, -50%);
   display: block;
   width: 6px;
   height: 6px;
