--- a/source/sass/blocks/form-cat-program.scss
+++ b/source/sass/blocks/form-cat-program.scss
@@ -25,17 +25,19 @@
 .form-cat-program__cat-info {
   display: flex;
   flex-direction: column;
-  padding-bottom: 30px;
+  padding-bottom: 26px;
 
   @media (--middle-vp) {
-    padding-bottom: 79px;
+    padding-bottom: 77px;
+    padding-left: 2px;
+    padding-right: 37px;
   }
 
   @media (--wide-vp) {
     grid-column: 1/-1;
     flex-direction: row;
     gap: 80px;
-    padding-top: 73px;
+    padding-bottom: 69px;
   }
 }
 
@@ -72,13 +74,15 @@
   display: flex;
   flex-direction: column;
   gap: 21px;
-  padding-top: 34px;
+  padding-top: 33px;
 
   @media (--middle-vp) {
     flex-direction: row;
     justify-content: flex-start;
     gap: 61px;
     padding-top: 54px;
+    padding-left: 2px;
+    align-items: center;
   }
 
   @media (--wide-vp) {
@@ -88,6 +92,7 @@
     grid-column: 1/-1;
     gap: 81px;
     padding-top: 61px;
+    margin-left: 1px;
   }
 }
 
@@ -103,6 +108,12 @@
   background-color: var(--button-color);
   max-width: 568px;
   flex: 1 0 auto;
+
+  @media (--not-narrow-vp) {
+    font-size: 20px;
+    line-height: 30px;
+    padding-top: 12px;
+  }
 
   @media (--middle-vp) {
     max-width: 282px;
@@ -123,7 +134,7 @@
   margin: 0;
   text-align: center;
 
-  @media (--middle-vp) {
+  @media (--not-narrow-vp) {
     font-size: 16px;
   }
 }
