--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -21,7 +21,7 @@
   }
 
   @media (--wide-vp) {
-    padding: 53px 0 0;
+    padding: 55px 0 0;
   }
 }
 
@@ -31,7 +31,13 @@
 
   @media (--narrow-vp) {
     width: 100%;
-    padding: 10px 0 18px;
+    padding: 10px 0 17px;
+  }
+
+  @media (--middle-vp) {
+    position: relative;
+    top: -3px;
+    left: -6px;
   }
 }
 
@@ -83,8 +89,8 @@
 
   @media (--middle-vp) {
     display: block;
-    width: 174px;
-    height: 50px;
+    width: 185px;
+    height: 52px;
   }
 
   @media (--wide-vp) {
@@ -97,9 +103,12 @@
 
 .header__logo-word {
   display: block;
+  position: relative;
+  top: 3px;
+  left: 1px;
   justify-self: flex-end;
   width: 101px;
-  height: 18px;
+  height: 20px;
   transform: translateX(50%);
 
   @media (--not-narrow-vp) {
