--- a/source/sass/blocks/inputs-group.scss
+++ b/source/sass/blocks/inputs-group.scss
@@ -14,10 +14,14 @@
 }
 
 .inputs-group.inputs-group--type_cat {
-  padding-bottom: 27px;
+  padding-bottom: 22px;
 
   @media (--not-narrow-vp) {
     border: none;
+  }
+
+  @media (--middle-vp) {
+    padding-bottom: 72px;
   }
 
   @media (--wide-vp) {
@@ -29,11 +33,12 @@
 .inputs-group.inputs-group--type_program {
   position: relative;
   padding-top: 23px;
-  padding-bottom: 20px;
+  padding-bottom: 18px;
 
   @media (--not-narrow-vp) {
     border: 1px solid var(--input-border-color);
-    padding: 25px 28px 25px;
+    padding: 25px 28px 24px;
+    gap: 14px;
   }
 
   @media (--middle-vp) {
@@ -42,6 +47,61 @@
 
   @media (--wide-vp) {
     grid-column: 2/3;
+    padding: 25px 21px 24px 30px;
+  }
+}
+
+.inputs-group--type_program .inputs-group__input-label {
+  gap: 16px;
+
+  @media (--not-narrow-vp) {
+    gap: 20px;
+  }
+}
+
+.inputs-group__input-label.inputs-group__input-label--cat-name {
+  @media (--middle-vp) {
+    gap: 16px;
+  }
+
+  @media (--wide-vp) {
+    gap: 17px;
+  }
+}
+
+.inputs-group__input-label--cat-name .inputs-group__input {
+  @media (--wide-vp) {
+    padding-left: 20px;
+  }
+}
+
+.inputs-group__input-label.inputs-group__input-label--cat-weight {
+  @media (--narrow-vp) {
+    gap: 16px;
+  }
+
+  @media (--middle-vp) {
+    gap: 20px;
+  }
+
+  @media (--wide-vp) {
+    gap: 21px;
+  }
+}
+
+.inputs-group__input-label--cat-weight .inputs-group__input {
+  @media (--wide-vp) {
+    padding-left: 19px;
+  }
+}
+
+.inputs-group__input-label.inputs-group__input-label--cat-age {
+  @media (--middle-vp) {
+    gap: 17px;
+  }
+
+  @media (--wide-vp) {
+    gap: 18px;
   }
 }
 
@@ -65,22 +125,39 @@
 }
 
 .inputs-group--contacts-container {
-  padding-top: 19px;
+  padding-top: 34px;
 
   @media (--middle-vp) {
-    padding-top: 50px;
+    padding-top: 74px;
+    padding-right: 35px;
   }
 
   @media (--wide-vp) {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding-top: 53px;
+    padding-top: 76px;
+    gap: 77px;
+  }
+}
+
+.inputs-group--contacts-container .inputs-group__input {
+  --input-border-color: #cdcdcd;
+  padding-left: 13px;
+
+  @media (--not-narrow-vp) {
+    padding-left: 18px;
+  }
+}
+
+.inputs-group--contacts-container .inputs-group__input-label--phone {
+  @media (--not-narrow-vp) {
+    gap: 16px;
   }
 }
 
 .inputs-group.inputs-group--type_additionals {
   gap: 32px;
-  padding-top: 56px;
+  padding-top: 33px;
 
   @media (--not-narrow-vp) {
     grid-column: 1/-1;
@@ -89,11 +166,11 @@
   }
 
   @media (--middle-vp) {
-    padding-top: 89px;
+    padding-top: 55px;
   }
 
   @media (--wide-vp) {
-    padding-top: 93px;
+    padding-top: 56px;
   }
 }
 
@@ -106,30 +183,67 @@
   @media (--middle-vp) {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    padding-left: 1px;
+    row-gap: 32px;
+    column-gap: 20px;
   }
 
   @media (--wide-vp) {
     flex-direction: row;
+    gap: 104px;
   }
 }
 
-.inputs-group__input-label--email {
-  position: relative;
+.inputs-group__checkbox-container .inputs-group__input-label {
+  gap: 16px;
+
+  @media (--not-narrow-vp) {
+    gap: 19px;
+    max-width: 221px;
+  }
 }
 
-.inputs-group__input-label--phone {
+.inputs-group__input-label.inputs-group__input-label--email {
   position: relative;
+
+  @media (--narrow-vp) {
+    gap: 11px;
+  }
+}
+
+.inputs-group__input-label--email .inputs-group__input {
+  @media (--narrow-vp) {
+    padding-left: 15px;
+  }
+}
+
+.inputs-group__input-label.inputs-group__input-label--phone {
+  position: relative;
+
+  @media (--narrow-vp) {
+    gap: 11px;
+  }
+}
+
+.inputs-group__input-label--phone .inputs-group__input {
+  @media (--narrow-vp) {
+    padding-left: 15px;
+  }
 }
 
 .inputs-group__contacts-icon {
   position: absolute;
-  right: 20px;
+  right: 12px;
   top: 50%;
   transform: translateY(-50%);
   width: 20px;
   height: 20px;
   stroke: #222222;
   fill: #000000;
+
+  @media (--not-narrow-vp) {
+    right: 18px;
+  }
 }
 
 
@@ -149,9 +263,10 @@
   color: var(--base-font-color);
   white-space: nowrap;
 
-  @media (--middle-vp) {
+  @media (--not-narrow-vp) {
     font-size: 20px;
     line-height: 30px;
+    gap: 22px;
   }
 }
 
@@ -167,13 +282,18 @@
   outline: none;
   border: none;
   box-shadow: inset 0 0 0 1px var(--input-border-color);
-  padding: 0 15px;
+  padding: 0 10px 0 17px;
   overflow: hidden;
   appearance: none;
 
-  @media (--middle-vp) {
+  @media (--not-narrow-vp) {
     font-size: 20px;
     line-height: 30px;
+    min-height: 52px;
+  }
+
+  @media (--middle-vp) {
+    padding-left: 19px;
   }
 }
 
@@ -226,20 +346,22 @@
   align-items: stretch;
   text-align: start;
   margin: 0;
-  gap: 34px;
-  padding-bottom: 26px;
-  padding-top: 28px;
+  gap: 38px;
+  padding-bottom: 23px;
+  padding-top: 24px;
 
   @media (--middle-vp) {
-    gap: 70px;
-    padding-bottom: 69px;
-    padding-top: 69px;
+    gap: 74px;
+    padding-bottom: 67px;
+    padding-top: 67px;
+    padding-left: 1px;
+    padding-right: 37px;
   }
 
   @media (--wide-vp) {
-    gap: 71px;
-    padding-bottom: 71px;
-    padding-top: 73px;
+    gap: 76px;
+    padding-bottom: 68px;
+    padding-top: 67px;
     grid-column: 1/-1;
   }
 }
@@ -248,10 +370,16 @@
   box-sizing: border-box;
   width: 100%;
   min-height: 150px;
-  padding: 10px 19px;
+  padding: 10px 14px;
   border: none;
   outline: none;
   box-shadow: inset 0 0 0 1px var(--input-border-color);
+
+  @media (--not-narrow-vp) {
+    min-height: 174px;
+    padding-left: 20px;
+    padding-top: 10px;
+  }
 }
 
 .inputs-group__comment::placeholder {
@@ -261,6 +389,11 @@
   font-weight: 400;
   color: var(--base-font-color);
   text-transform: uppercase;
+
+  @media (--not-narrow-vp) {
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
 
 .inputs-group__group-title {
@@ -275,6 +408,11 @@
   margin: 0;
   padding: 0;
 
+  @media (--not-narrow-vp) {
+    font-size: 36px;
+    line-height: 36px;
+  }
+
   @media (--narrow-vp) {
     max-width: 190px;
   }
@@ -287,10 +425,10 @@
 .inputs-group__group-title::before {
   content: "";
   position: absolute;
-  top: 50%;
+  top: calc(50% + 2px);
   right: calc(100% + var(--title-indent));
   display: block;
-  width: calc(100vw - 100% - var(--title-indent));
+  width: calc(100vw - 100% - 3px - var(--title-indent));
   height: 2px;
   background-color: var(--line-color);
   box-shadow: calc(100vw + var(--title-indent)) 0 0 0 var(--line-color);
@@ -305,6 +443,14 @@
 
   @media (--wide-vp) {
     --title-indent: 40px;
+    top: calc(50% + 4px);
+  }
+}
+
+.inputs-group--type_contacts .inputs-group__group-title::before {
+  @media (--narrow-vp) {
+    top: calc(50% - 10px);
+    width: calc(100vw - 100% + 9px - var(--title-indent));
   }
 }
 
@@ -321,6 +467,12 @@
   height: 30px;
   background: url("data:image/svg+xml,%3Csvg width='14' height='15' viewBox='0 0 14 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cellipse cx='7' cy='7.274' rx='6.75' ry='6.773' fill='%2368B738'/%3E%3C/svg%3E") no-repeat 50% 50%;
   box-shadow: inset 0 0 0 1px var(--mark-border-color);
+
+  @media (--not-narrow-vp) {
+    width: 39px;
+    height: 39px;
+    background-size: 20px;
+  }
 }
 
 .inputs-group__input-radio:disabled + .inputs-group__input-label {
@@ -334,6 +486,12 @@
   width: 30px;
   height: 30px;
   box-shadow: inset 0 0 0 1px var(--mark-border-color);
+
+  @media (--not-narrow-vp) {
+    width: 39px;
+    height: 39px;
+    background-size: 20px;
+  }
 }
 
 .inputs-group__input-radio ~ .inputs-group__input-label:hover {
@@ -351,6 +509,12 @@
   height: 30px;
   background: url("data:image/svg+xml,%3Csvg width='19' height='15' viewBox='0 0 19 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M7 11.718 1.3 5.27.25 6.457 7 14.094 18.25 1.366 17.2.094 7 11.718Z' fill='%2368B738'/%3E%3C/svg%3E") no-repeat 50% 50%;
   box-shadow: inset 0 0 0 1px var(--mark-border-color);
+
+  @media (--not-narrow-vp) {
+    width: 40px;
+    height: 40px;
+    background-size: 26px;
+  }
 }
 
 .inputs-group__input-checkbox:disabled + .inputs-group__input-label {
@@ -363,6 +527,12 @@
   width: 30px;
   height: 30px;
   box-shadow: inset 0 0 0 1px var(--mark-border-color);
+
+  @media (--not-narrow-vp) {
+    width: 40px;
+    height: 40px;
+    background-size: 26px;
+  }
 }
 
 .inputs-group__input-checkbox ~ .inputs-group__input-label:hover {
