--- a/source/sass/blocks/nutrition-programm.scss
+++ b/source/sass/blocks/nutrition-programm.scss
@@ -5,14 +5,17 @@
   padding-top: 20px;
 
   @media (--middle-vp) {
-    padding-bottom: 49px;
+    padding-bottom: 45px;
+    padding-top: 61px;
+    gap: 30px;
   }
 
   @media (--wide-vp) {
     display: flex;
     flex-direction: row;
     gap: 80px;
-    padding-bottom: 71px;
+    padding-bottom: 51px;
+    padding-top: 26px;
   }
 }
 
@@ -30,6 +33,8 @@
     display: grid;
     grid-template-columns: 1fr 270px;
     align-content: flex-start;
+    gap: 0;
+    padding: 57px 10px 55px 53px;
   }
 
   @media (--wide-vp) {
@@ -38,24 +43,48 @@
     align-content: flex-start;
     max-width: 570px;
     margin: 0;
+    padding-top: 42px;
+    padding-left: 52px;
+    padding-bottom: 59px;
+  }
+}
+
+.nutrition-programm__card--slim {
+  @media (--wide-vp) {
+    column-gap: 57px;
+    row-gap: 0;
+  }
+}
+
+.nutrition-programm__card--fat {
+  @media (--wide-vp) {
+    column-gap: 28px;
+    row-gap: 0;
   }
 }
 
 .nutrition-programm__card--slim::before {
   content: url("../../icons/sprite.svg#cat-slim");
+  position: relative;
   display: block;
-  width: 50px;
-  height: 53px;
+  width: 52px;
+  height: 52px;
+  margin-left: -1px;
 
   @media (--middle-vp) {
     grid-area: 1/2/3/3;
+    top: 23px;
+    left: -17px;
     justify-self: center;
-    width: 200px;
+    width: 212px;
     height: 211px;
   }
 
   @media (--wide-vp) {
-    width: 100px;
+    position: relative;
+    top: -1px;
+    left: -2px;
+    width: 106px;
     height: 106px;
   }
 }
@@ -63,19 +92,27 @@
 .nutrition-programm__card--fat::before {
   content: url("../../icons/sprite.svg#cat-muscle");
   display: block;
+  position: relative;
+  top: -6px;
+  left: -9px;
   width: 67px;
-  height: 50px;
+  height: 52px;
 
   @media (--middle-vp) {
     grid-area: 1/2/3/3;
     justify-self: center;
     width: 268px;
-    height: 200px;
+    height: 211px;
+    top: 0;
+    left: -19px;
   }
 
   @media (--wide-vp) {
+    position: relative;
+    top: -12px;
+    left: -19px;
     width: 134px;
-    height: 100px;
+    height: 106px;
   }
 }
 
@@ -102,6 +139,12 @@
   }
 }
 
+@media (--narrow-vp) {
+  .nutrition-programm__card--fat .nutrition-programm__title {
+    margin-left: -17px;
+  }
+}
+
 .nutrition-programm__text {
   font-family: var(--main-font);
   font-size: 14px;
@@ -111,6 +154,10 @@
   margin: 0;
 
   @media (--middle-vp) {
+    position: relative;
+    top: -14px;
+    left: -2px;
+    max-width: 340px;
     grid-column: 1/2;
     font-size: 16px;
     line-height: 24px;
@@ -122,6 +169,7 @@
     font-size: 16px;
     line-height: 24px;
     text-align: start;
+    padding: 39px 10px 26px 0;
   }
 }
 
@@ -137,7 +185,8 @@
   text-decoration: none;
   width: 100%;
   border-top: 1px solid #d9d9d9;
-  padding-top: 15px;
+  padding-top: 19px;
+  margin-left: -3px;
 
   @media (--not-narrow-vp) {
     grid-column: 1/-1;
@@ -146,12 +195,20 @@
     text-align: start;
     border-top: none;
   }
+
+  @media (--middle-vp) {
+    grid-column: 1/2;
+  }
+
+  @media (--wide-vp) {
+    padding: 0 0 0 3px;
+  }
 }
 
 .nutrition-programm__link::after {
   content: "";
   display: inline-block;
-  width: 33px;
+  width: 35px;
   height: 10px;
   background-image: url("../../icons/sprite.svg#arrow-active");
   background-repeat: no-repeat;
