--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -43,19 +43,15 @@
   flex-direction: column;
   gap: 37px;
   box-sizing: border-box;
-  padding: 27px  0 39px;
-
-  @media (--narrow-vp) {
-    border-top: 1px solid #d9d9d9;
-  }
+  padding: 27px  0 40px;
 
   @media (--middle-vp) {
-    gap: 52px;
-    padding: 75px 0 69px;
+    gap: 55px;
+    padding: 62px 10px 65px 39px;
   }
 
   @media (--wide-vp) {
     gap: 54px;
-    padding: 85px 110px 72px;
+    padding: 74px 110px 67px;
   }
 }
