--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -1,8 +1,8 @@
 .product-card {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  row-gap: 13px;
-  padding: 19px 20px;
+  row-gap: 21px;
+  padding: 19px 20px 24px;
   border-top: 1px solid var(--product-card-border-color);
 
   @media (--not-narrow-vp) {
@@ -12,8 +12,8 @@
     flex-direction: column;
     justify-content: flex-end;
     gap: 33px;
-    padding-left: 36px;
-    padding-right: 36px;
+    padding-left: 38px;
+    padding-right: 38px;
     padding-top: 105px;
     padding-bottom: 39px;
     width: 100%;
@@ -50,16 +50,12 @@
 
 .product-card__item-value,
 .product-card__item-name {
-  @media (--middle-vp) {
-    font-size: 16px;
-    padding: 9px 0;
-    border-bottom: 1px solid var(--product-card__item-boreder-color);
-  }
+  --product-card-border-color: #cdcdcd;
 
-  @media (--wide-vp) {
+  @media (--not-narrow-vp) {
     font-size: 16px;
-    padding: 9px 0;
-    border-bottom: 1px solid var(--product-card__item-boreder-color);
+    padding: 8px 0;
+    box-shadow: inset 0 -1px 0 0 var(--product-card-border-color);
   }
 }
 
@@ -67,14 +63,19 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 18px;
+  gap: 15px;
   font-family: var(--main-font);
   font-size: 12px;
   line-height: 16px;
   color: var(--base-font-color);
 
   @media (--middle-vp) {
-    gap: 23px;
+    gap: 9px;
+  }
+
+  @media (--wide-vp) {
+    gap: 11px;
+    padding-left: 4px;
   }
 }
 
@@ -94,6 +95,7 @@
   background-color: var(--button-color);
   padding: 10px;
   outline: none;
+  margin-right: -1px;
 }
 
 .product-card__button:hover {
@@ -146,36 +148,56 @@
 
 .product-card__image {
   display: block;
-  width: 86px;
+  position: relative;
+  top: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 68px;
   height: 100%;
   object-fit: contain;
   justify-self: center;
 
   @media (--middle-vp) {
     position: absolute;
-    left: 50%;
-    top: -73px;
-    transform: translateX(-50%);
-    width: 168px;
+    top: -59px;
+    width: 161px;
     height: 200px;
   }
 
   @media (--wide-vp) {
     position: absolute;
-    left: 50%;
-    top: -73px;
-    transform: translateX(-50%);
-    width: 172px;
+    top: -67px;
+    width: 161px;
     height: 200px;
   }
 }
 
 .product-card:nth-child(even) .product-card__image {
+  @media (--narrow-vp) {
+    top: 10px;
+    width: 84px;
+  }
+
   @media (--middle-vp) {
-    top: -85px;
+    top: -74px;
+    width: 169px;
   }
 
   @media (--wide-vp) {
-    top: -85px;
+    top: -80px;
+    width: 180px;
+    height: 196px;
+    left: 125px;
+  }
+}
+
+@media (--narrow-vp) {
+  .product-card:first-child .product-card__image {
+    top: 6px;
+  }
+
+  .product-card:nth-last-child(2) .product-card__image {
+    top: 15px;
+    width: 71px;
   }
 }
