--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -1,14 +1,28 @@
 .slider {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 277px;
+  height: 290px;
 
+  @media (--narrow-vp) {
+    top: 33px;
+    gap: 20px;
+  }
 
   @media (--not-narrow-vp) {
     height: 576px;
     width: 592px;
+  }
+
+  @media (--middle-vp) {
+    top: -8px;
+  }
+
+  @media (--wide-vp) {
+    top: -46px;
+    gap: 17px;
   }
 }
 
@@ -17,7 +31,7 @@
   flex-direction: row;
   justify-content: space-between;
   height: 100%;
-  width: 280px;
+  width: 304px;
 
   @media (--not-narrow-vp) {
     width: 592px;
@@ -25,17 +39,21 @@
 }
 
 .slider__image {
-  height: 232px;
+  height: 245px;
   position: absolute;
 
   @media (--not-narrow-vp) {
     width: 592px;
     height: 100%;
   }
+
+  @media (--middle-vp) {
+    height: calc(100% - 15px);
+  }
 }
 
 .slider__image--now {
-  right: 0;
+  right: -22px;
 }
 
 .slider__first-image {
