--- a/source/templates/contacts.twig
+++ b/source/templates/contacts.twig
@@ -1,6 +1,6 @@
-<section class="contacts">
+<section class="contacts {% if permalink != "index.html" %} contacts-background {% endif %}">
   <h2 class="visually-hidden">Наш адрес</h2>
-  <div class="contacts__text page__centerer">
+  <div class="contacts__text page__centerer {% if permalink != "index.html" %} contacts-background {% endif %}">
     <p class="contacts__lead-text">приглашаем<br>к&nbsp;сотрудничеству<br>дилеров!</p>
     <p class="contacts__adress">ул. Большая<br>Конюшенная, д. 19/8 <span class="contacts__adress-city">Санкт-Петербург</span></p>
   </div>
